fix blog width on mobile

--- a/src/app/pages/blog-overview/blog-overview.component.sass
+++ b/src/app/pages/blog-overview/blog-overview.component.sass
@@ -3,7 +3,8 @@
   width: 100%
 
 .blog-overview-container
-  width: 60rem
+  max-width: 60rem
+  width: 100%
   padding: 2rem
 
 .blog-element
